@@ -1,3 +1,9 @@
+Wed Apr 15 17:36:51 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_trace.c (rb_tracepoint_new): Add documentation for
+	  rb_tracepoint_new C level API [ci skip]
+	  Provided by @emilsoman. [fix GH-869]
+
 Wed Apr 15 10:37:40 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* doc/contributors.rdoc: fix a typo. Patch by @davydovanton
